Bug #24361 valgrind error when shutting down mysqld connected to cluster
Submitted: 16 Nov 2006 13:40 Modified: 23 Nov 2006 15:50
Reporter: Magnus Blaudd Email Updates:
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version: OS:Any
Assigned to: Magnus Blaudd Target Version:

[16 Nov 2006 13:40] Magnus Blaudd
Description:
VALGRIND: 'Invalid read of size 4'
    COUNT: 6
    FUNCTION: NdbEventBuffer::execSUB_GCP_COMPLETE_REP(SubGcpCompleteRep    FILES:   
master.err master1.err
    TESTS:    ndb_restore_compat ndbapi rpl_ndb_innodb_trans rpl_truncate_7ndb
strict_autoinc_5ndb
    STACK: at 0x8D71C4: NdbEventBuffer::execSUB_GCP_COMPLETE_REP(SubGcpCompleteRep
const*) (NdbEventOperationImpl.cpp:1436)
             by 0x8BFA12: Ndb::handleReceivedSignal(NdbApiSignal*, LinearSectionPtr*)
(Ndbif.cpp:735)
             by 0x8BE768: Ndb::executeMessage(void*, NdbApiSignal*, LinearSectionPtr*)
(Ndbif.cpp:175)
             by 0x926C6F: TransporterFacade::for_each(NdbApiSignal*, LinearSectionPtr*)
(TransporterFacade.cpp:773)
             by 0x925B8F: execute(void*, SignalHeader*, unsigned char, unsigned*,
LinearSectionPtr*) (TransporterFacade.cpp:332)
             by 0x930729: TransporterRegistry::unpack(unsigned*, unsigned, unsigned
short, IOState) (Packer.cpp:109)
             by 0x92EB49: TransporterRegistry::performReceive()
(TransporterRegistry.cpp:956)
             by 0x92618D: TransporterFacade::threadMainReceive()
(TransporterFacade.cpp:514)
             by 0x9260A8: runReceiveResponse_C (TransporterFacade.cpp:486)
             by 0x91507E: ndb_thread_wrapper (NdbThread.c:82)
             by 0x4D3AC63: start_thread (in /lib64/tls/libpthread-0.60.so)
             by 0x52F3242: clone (in /lib64/tls/libc-2.3.2.so)
           Address 0x6B56B88 is 1,168 bytes inside a block of size 1,184 free'd
             at 0x4A197FD: free (vg_replace_malloc.c:233)
             by 0x8C12D6: Ndb::~Ndb() (Ndbinit.cpp:160)
             by 0x6F9C44: ndbcluster_end(handlerton*, ha_panic_function)
(ha_ndbcluster.cc:6660)
             by 0x6CDA19: ha_finalize_handlerton(st_plugin_int*) (handler.cc:383)
             by 0x78EC54: plugin_deinitialize(st_plugin_int*) (sql_plugin.cc:502)
             by 0x78F69F: plugin_shutdown() (sql_plugin.cc:799)
             by 0x5F58C1: clean_up(bool) (mysqld.cc:1195)
             by 0x5F57B8: kill_server(void*) (mysqld.cc:1128)
             by 0x5F329F: kill_server_thread (mysqld.cc:1092)
             by 0x4D3AC63: start_thread (in /lib64/tls/libpthread-0.60.so)
             by 0x52F3242: clone (in /lib64/tls/libc-2.3.2.so)

How to repeat:
Detected by valgrind run on nocona by pb
[16 Nov 2006 21:31] Calvin Sun
One more Valgrind warning on 5.1 main tree:

VALGRIND: 'Invalid read of size 4'
     COUNT: 1
     FUNCTION: Ndb::handleReceivedSignal(NdbApiSignal*,    FILES: master.err
     TESTS:    loaddata_autocom_ndb

It may be from the same source.
[17 Nov 2006 12:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15484

ChangeSet@1.2323, 2006-11-17 13:18:09+01:00, msvensson@neptunus.(none) +1 -0
  Bug#24361 valgrind error when shutting down mysqld connected to cluster
   - Disconnect from transporter before starting to delete objects
[20 Nov 2006 20:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15570

ChangeSet@1.2368, 2006-11-20 21:11:45+01:00, msvensson@shellback.(none) +1 -0
  Bug#24361 valgrind error when shutting down mysqld connected to cluster
    - Disconnect from transporter before starting to delete objects
[23 Nov 2006 15:50] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Internal only; no end user documentation required.