Bug#24361 valgrind error when shutting down mysqld connected to cluster  - Disconnect from transporter before starting to delete objects